--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -1,5 +1,10 @@
 .productListing {
-  width: 48px;
-  height: 48px;
-  background-color: black;
+  width: 6em;
+  height: 6em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  border-radius: 1em;
+  background-color: rgb(221, 221, 221);
 }
