--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -1,76 +1,86 @@
 /**
  * Do not edit directly
- * Generated on Wed, 08 Feb 2023 12:51:25 GMT
+ * Generated on Sun, 07 May 2023 11:05:37 GMT
  */
 
 :root {
-  --font-letterespacing-7: 1em;
-  --font-letterespacing-6: 0.75em;
-  --font-letterespacing-5: 0.5em;
-  --font-letterespacing-4: 0.15em;
-  --font-letterespacing-3: 0.075em;
-  --font-letterespacing-2: 0.05em;
-  --font-letterespacing-1: 0.025em;
-  --font-letterespacing-0: -0.05em;
-  --font-lineheight-00: 0.95;
-  --font-lineheight-5: 2;
-  --font-lineheight-4: 1.75;
-  --font-lineheight-3: 1.5;
-  --font-lineheight-2: 1.375;
-  --font-lineheight-1: 1.25;
-  --font-lineheight-0: 1.1;
-  --font-size-fluid-3: clamp(2rem, 9vw, 3.5rem);
-  --font-size-fluid-2: clamp(1.5rem, 6vw, 2.5rem);
-  --font-size-fluid-1: clamp(1rem, 4vw, 1.5rem);
-  --font-size-fluid-0: clamp(0.75rem, 2vw, 1rem);
-  --font-size-00: 0.5rem;
-  --font-size-base: 1.6rem;
-  --font-size-8: 3.5rem;
-  --font-size-7: 3rem;
-  --font-size-6: 2.5rem;
-  --font-size-5: 2rem;
-  --font-size-4: 1.5rem;
-  --font-size-3: 1.25rem;
-  --font-size-2: 1.1rem;
-  --font-size-1: 1rem;
-  --font-size-0: 0.75rem;
-  --font-mono: inconsolata, fira mono, ui-monospace, sf mono, monaco, droid sans mono, source code pro, monospace;
-  --font-serif: ui-serif, serif;
-  --font-sans: var(--next-font-sans), system-ui;
-  --spacing-08: 0.8rem;
-  --spacing-06: 0.6rem;
-  --spacing-04: 0.4rem;
-  --spacing-02: 0.2rem;
-  --spacing-01: 1px;
-  --spacing-64: 6.4rem;
-  --spacing-56: 5.6rem;
-  --spacing-44: 4.4rem;
-  --spacing-40: 4rem;
-  --spacing-36: 3.6rem;
-  --spacing-32: 3.2rem;
-  --spacing-28: 2.8rem;
-  --spacing-24: 2.4rem;
-  --spacing-20: 2rem;
-  --spacing-16: 1.6rem;
-  --spacing-14: 1.4rem;
-  --spacing-10: 1rem;
-  --spacing-0: 0;
-  --shadow-inner: inset 0 2px 4px 0 rgb(0 0 0 / 5%);
-  --shadow-6: 0 25px 50px -12px rgb(0 0 0 / 25%);
-  --shadow-5: 0 20px 25px -5px rgb(0 0 0 / 10%), 0 8px 10px -6px rgb(0 0 0 / 10%);
-  --shadow-4: 0 10px 15px -3px rgb(0 0 0 / 10%), 0 4px 6px -4px rgb(0 0 0 / 10%);
-  --shadow-3: 0 4px 6px -1px rgb(0 0 0 / 10%), 0 2px 4px -2px rgb(0 0 0 / 10%);
-  --shadow-2: 0 1px 3px 0 rgb(0 0 0 / 10%), 0 1px 2px -1px rgb(0 0 0 / 10%);
-  --shadow-1: 0 1px 2px 0 rgb(0 0 0 / 5%);
+  --font-letterespacing-body: 0.02em;
+  --font-lineheight-body: 1.5;
+  --font-size-large: 1.25rem;
+  --font-size-medium: 1rem;
+  --font-size-small: 0.75rem;
+  --font-size-body: 1rem;
+  --font-size-details: 0.75rem;
+  --font-size-h4: 1.5rem;
+  --font-size-h3: 2rem;
+  --font-size-h2: 3rem;
+  --font-size-h1: 4rem;
+  --font-display: 'Mulish', system-ui;
+  --font-sans: 'Manrope', sans-serif;
+  --spacing-09: 3rem;
+  --spacing-08: 2rem;
+  --spacing-07: 1.75rem;
+  --spacing-06: 1.5rem;
+  --spacing-05: 1.25rem;
+  --spacing-04: 1rem;
+  --spacing-03: 0.75rem;
+  --spacing-02: 0.5rem;
+  --spacing-01: 0.375rem;
+  --spacing-00: 0.25rem;
+  --shadow-top: 0 -4px 8px 0 rgb(0 0 0 / 10%);
+  --shadow-v: 0 1px 4px 0 rgb(0 0 0 / 25%);
+  --shadow-xl: 0 12px 24px 0 rgb(0 0 0 / 10%);
+  --shadow-lg: 0 10px 20px 0 rgb(0 0 0 / 10%);
+  --shadow-md: 0 8px 16px 0 rgb(0 0 0 / 10%);
+  --shadow-sm: 0 6px 12px 0 rgb(0 0 0 / 10%);
+  --shadow-xs: 0 4px 8px 0 rgb(0 0 0 / 10%);
   --ratio-golden: 1.618/1;
   --ratio-ultrawide: 18/5;
   --ratio-widescreen: 16/9;
   --ratio-portrait: 3/4;
   --ratio-landscape: 4/3;
   --ratio-box: 1;
-  --color-tertiary: #ccc;
-  --color-secondary: #fff;
-  --color-primary: #365fd9;
+  --color-red-50: #fef2f2;
+  --color-red-100: #fee2e2;
+  --color-red-200: #fecaca;
+  --color-red-300: #fca5a5;
+  --color-red-400: #f87171;
+  --color-red-500: #ef4444;
+  --color-grey-filter: rgb(140 149 175 / 25%);
+  --color-grey-50: #f4f4f7;
+  --color-grey-100: #e2e5eb;
+  --color-grey-200: #d1d5df;
+  --color-grey-300: #c0c5d3;
+  --color-grey-400: #afb5c7;
+  --color-grey-500: #8c95af;
+  --color-blue-50: #eaeef9;
+  --color-blue-100: #c0ccee;
+  --color-blue-200: #a1b2e5;
+  --color-blue-300: #8198dd;
+  --color-blue-400: #627ed4;
+  --color-blue-500: #3457bf;
+  --color-purple-filter: rgb(87 90 185 / 25%);
+  --color-purple-50: #e6e6f5;
+  --color-purple-100: #cdcdea;
+  --color-purple-200: #b3b5df;
+  --color-purple-300: #9a9cd5;
+  --color-purple-400: #8183cb;
+  --color-purple-500: #575ab9;
+  --color-green-50: #d0efdd;
+  --color-green-100: #ade3c3;
+  --color-green-200: #8ad8a9;
+  --color-green-300: #67cc8f;
+  --color-green-400: #44c076;
+  --color-green-500: #329459;
+  --color-yellow-50: #fff9d9;
+  --color-yellow-100: #fff3b3;
+  --color-yellow-200: #ffed8c;
+  --color-yellow-300: #ffe766;
+  --color-yellow-400: #ffdf33;
+  --color-yellow-500: #ffd700;
+  --color-filter: rgb(25 25 25 / 25%);
+  --color-white: #fff;
+  --color-black: #191919;
   --bp-xxl: 1920px;
   --bp-xl: 1440px;
   --bp-lg: 1024px;
@@ -79,12 +89,9 @@
   --bp-xs: 360px;
   --bp-xxs: 240px;
   --radius-round: 1e5px;
-  --radius-6: 8rem;
-  --radius-5: 4rem;
-  --radius-4: 2rem;
-  --radius-3: 1rem;
-  --radius-2: 5px;
-  --radius-1: 2px;
+  --radius-3: 20px;
+  --radius-2: 8px;
+  --radius-1: 4px;
   --border-size-5: 25px;
   --border-size-4: 10px;
   --border-size-3: 5px;
