--- a/src/components/atoms/MapSetup/styles.module.css
+++ b/src/components/atoms/MapSetup/styles.module.css
@@ -1,24 +1,24 @@
 .setupContainer {
-  box-sizing: border-box;
-  background-color: whitesmoke;
   position: absolute;
+  top: 2em;
+  right: 2em;
+  z-index: 10;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  height: 400px;
   width: 350px;
-  z-index: 10;
-  top: 2em;
-  right: 2em;
+  height: 400px;
   padding: 1em;
-  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+  background-color: whitesmoke;
+  box-shadow: 1px 1px 5px rgb(0 0 0 / 20%);
 }
 
 .btnPrimary {
-  cursor: pointer;
   padding: 0.5em 2em;
-  border-radius: 4px;
-  background-color: blue;
   color: white;
+  cursor: pointer;
+  background-color: blue;
+  border-radius: 4px;
 }
