--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -1,10 +1,10 @@
 .productListing {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 6em;
   height: 6em;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   font-weight: 700;
+  background-color: rgb(221 221 221);
   border-radius: 1em;
-  background-color: rgb(221, 221, 221);
 }
