--- a/src/components/molecule/Editor/styles.module.css
+++ b/src/components/molecule/Editor/styles.module.css
@@ -5,21 +5,18 @@
   z-index: 50;
   display: flex;
   gap: 1em;
-  border-radius: 0 0 0 1em;
   align-items: center;
   justify-content: center;
   height: fit-content;
   padding: 0.4em 2em;
   background-color: #F4F4F7;
-  -webkit-box-shadow: -27px 26px 29px -30px rgba(0, 0, 0, 0.46);
-  -moz-box-shadow: -27px 26px 29px -30px rgba(0, 0, 0, 0.46);
-  box-shadow: -27px 26px 29px -30px rgba(0, 0, 0, 0.46);
-  box-shadow: black;
+  border-radius: 0 0 0 1em;
+  box-shadow: -27px 26px 29px -30px rgb(0 0 0 / 46%);
 }
 
 .action {
-  cursor: pointer;
   padding: 0.8em 1em;
-  border-radius: 5px;
+  cursor: pointer;
   background-color: white;
+  border-radius: 5px;
 }
