--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -15,8 +15,8 @@
   --font-size-h3: 2rem;
   --font-size-h2: 3rem;
   --font-size-h1: 4rem;
-  --font-display: var(--next-font-display), system-ui;
-  --font-sans: var(--next-font-sans), system-ui;
+  --font-display: 'Mullish', system-ui;
+  --font-sans: 'Manrope', system-ui;
   --spacing-09: 3rem;
   --spacing-08: 2rem;
   --spacing-07: 1.75rem;
