--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -2,9 +2,9 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 6em;
-  height: 6em;
+  width: 6rem;
+  height: 6rem;
   font-weight: 700;
-  background-color: rgb(221 221 221);
-  border-radius: 1em;
+  background-color: var(--color-grey-50);
+  border-radius: var(--radius-2);
 }
