--- a/src/components/molecule/ProjectCard/styles.module.css
+++ b/src/components/molecule/ProjectCard/styles.module.css
@@ -1,18 +1,18 @@
 .cardContainer {
   position: absolute;
-  right: 1em;
-  bottom: 1em;
+  right: var(--spacing-04);
+  bottom: var(--spacing-04);
   z-index: 10;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: var(--spacing-02);
   width: 448px;
   height: fit-content;
-  padding: 12px;
-  background-color: whitesmoke;
-  border-radius: 8px;
-  box-shadow: 1px 1px 5px rgb(0 0 0 / 20%);
+  padding: var(--spacing-03);
+  background-color: var(--color-white);
+  border-radius:var(--spacing-02);
+  box-shadow: var(--shadow-xs);
 }
 
 .hidden {
@@ -30,42 +30,24 @@
 .cardImg {
   width: 100%;
   height: 196px;
-  background-color: black;
-  border-radius: 8px;
+  background-color: var(--color-grey-200);
+  border-radius: var(--radius-2);
 }
 
 .cardHeader {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: var(--spacing-02);
   width: 100%;
 }
 
 .subCardHeader {
   display: flex;
-  gap: 1em;
+  gap: var(--spacing-04);
   width: 100%;
-}
-
-.cardButton {
-  width: fit-content;
-  height: fit-content;
-  padding: 0.5em 1em;
-  color: white;
-  text-decoration: none;
-  cursor: pointer;
-  border-radius: 100px;
-}
-
-.btnMain {
-  background-color: #3457BF;
-}
-
-.btnSucces {
-  background-color: #329459;
 }
 
 .btnContainer {
   display: flex;
-  gap: 1em;
+  gap: var(--spacing-04);
 }
