--- a/src/components/molecule/Toolbar/styles.module.css
+++ b/src/components/molecule/Toolbar/styles.module.css
@@ -5,11 +5,11 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  gap: 2em;
+  gap: var(--spacing-08);
   align-items: center;
   width: 100%;
   height: 180px;
-  padding: 0 2em;
-  background-color: whitesmoke;
+  padding: 0 var(--spacing-08);;
+  background-color: var(--color-white);
   box-shadow: 1px 1px 5px rgb(0 0 0 / 20%);
 }
