--- a/src/components/molecule/Toolbar/styles.module.css
+++ b/src/components/molecule/Toolbar/styles.module.css
@@ -41,3 +41,10 @@
   width: 3em;
   height: 3em;
 }
+
+.misc {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
