--- a/src/components/molecule/Toolbar/styles.module.css
+++ b/src/components/molecule/Toolbar/styles.module.css
@@ -40,6 +40,9 @@
   background-color: white;
   width: 3em;
   height: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .misc {
