--- a/src/components/molecule/Toolbar/styles.module.css
+++ b/src/components/molecule/Toolbar/styles.module.css
@@ -45,6 +45,10 @@
   align-items: center;
 }
 
+.activeFilter {
+  background-color: var(--color-blue-500);
+}
+
 .misc {
   width: 100%;
   display: flex;
