--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -5,10 +5,14 @@
   gap: var(--spacing-04);
   padding: 12px;
   width: 100%;
+  overflow: scroll;
+  flex: 0;
 }
 
 .productListing {
+  overflow-x: auto;
   display: flex;
+  flex: 0 0 auto;
   align-items: center;
   justify-content: center;
   width: 6rem;
