--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -17,6 +17,7 @@
   --font-size-h1: 4rem;
   --font-display: 'Mullish', system-ui;
   --font-sans: 'Manrope', system-ui;
+  --spacing-10: 4rem;
   --spacing-09: 3rem;
   --spacing-08: 2rem;
   --spacing-07: 1.75rem;
@@ -98,5 +99,5 @@
   --border-size-2: 2px;
   --border-size-1: 1px;
   --map-size-base: 533px;
-  --map-size-full: 100vh;
+  --map-size-full: 90vh;
 }
