--- a/src/components/molecule/Editor/styles.module.css
+++ b/src/components/molecule/Editor/styles.module.css
@@ -3,6 +3,7 @@
   right: 0;
   z-index: 50;
   display: flex;
+  flex-direction: column;
   gap: var(--spacing-04);
   align-items: center;
   justify-content: center;
@@ -13,7 +14,22 @@
   box-shadow: var(--shadow-xs);
 }
 
+.actionContainer {
+  display: flex;
+  gap: var(--spacing-04);
+  align-items: center;
+  justify-content: center;
+  height: fit-content;
+}
+
 .action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+}
+
+.actionIcon {
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -22,4 +38,26 @@
   height: var(--spacing-09);
   background-color: var(--color-white);
   border-radius: var(--radius-2);
+}
+
+.hidden {
+  display: none;
+}
+
+.actionName {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  font-weight: 600;
+  transform: translateY(3rem);
+  z-index: 100;
+  background-color: var(--color-white);
+  padding: var(--spacing-01) var(--spacing-03);
+  border-radius: var(--radius-round);
+  box-shadow: var(--shadow-sm);
+}
+
+.action:hover .actionName {
+  display: block;
+  opacity: 1;
 }
