--- a/src/components/atoms/Button/styles.module.css
+++ b/src/components/atoms/Button/styles.module.css
@@ -6,7 +6,7 @@
   max-width: fit-content;
   font-family: var(--font-sans);
   font-weight: 600;
-  border-radius: var(--radius-round);
+  border-radius: var(--radius-2);
 }
 
 .themePrimary {
