--- a/src/components/molecule/AdminNewProject/Cocreation/styles.module.css
+++ b/src/components/molecule/AdminNewProject/Cocreation/styles.module.css
@@ -1,15 +1,37 @@
-.setupContainer {
+.cocreationContainer {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-06);
   padding: var(--spacing-06) 6rem;
 }
 
-.date, .name {
+.location, .cocreation, .buildingpieces, .checkedBuildingPieces {
   display: flex;
   flex-direction: column;
   gap: var(--spacing-06);
 }
+
+.checkedBuildingPiece {
+  display: flex;
+  gap: var(--spacing-06);
+  align-items: center;
+}
+
+.imgContainer {
+  width: 108px;
+  height: 108px;
+  background: var(--color-grey-50);
+  border-radius: var(--radius-2);
+  object-fit: contain;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+
+
 
 .publishDate, .cocreationDateStart, .cocreationDateEnd, .voteDateStart, .voteDateEnd {
   display: flex;
