last formpage to creat projects: summary

--- a/src/components/organisms/Admin/AdminNewProject/styles.module.css
+++ b/src/components/organisms/Admin/AdminNewProject/styles.module.css
@@ -3,6 +3,7 @@
   border-radius: var(--radius-2);
   padding: var(--spacing-08);
   padding-bottom: var(--spacing-09);
+  width: 100%;
 }
 
 .btnContainer {
