fix: builder dom structure ++ style

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -99,5 +99,5 @@
   --border-size-2: 2px;
   --border-size-1: 1px;
   --map-size-base: 533px;
-  --map-size-full: 90vh;
+  --map-size-full: 100%;
 }
