--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -21,3 +21,7 @@
   background-color: var(--color-grey-50);
   border-radius: var(--radius-2);
 }
+
+.active {
+  background-color: var(--color-yellow-300);
+}
