--- a/src/components/molecule/Toolbar/styles.module.css
+++ b/src/components/molecule/Toolbar/styles.module.css
@@ -1,6 +1,5 @@
 .toolbarContainer {
-  position: absolute;
-  bottom: 0;
+  position: relative;
   z-index: 10;
   box-sizing: border-box;
   display: flex;
