feat: add filter label on hover ++ styling fixes

--- a/src/components/atoms/Product/styles.module.css
+++ b/src/components/atoms/Product/styles.module.css
@@ -20,6 +20,7 @@
   font-weight: 700;
   background-color: var(--color-grey-50);
   border-radius: var(--radius-2);
+  cursor: pointer;
 }
 
 .active {
