--- a/src/components/molecule/Toolbar/styles.module.css
+++ b/src/components/molecule/Toolbar/styles.module.css
@@ -11,7 +11,6 @@
   padding: var(--spacing-04) var(--spacing-08);
   background-color: var(--color-grey-100);
   box-shadow: 1px 1px 5px rgb(0 0 0 / 20%);
-  overflow: hidden;
 }
 
 .interaction {
@@ -37,6 +36,13 @@
 }
 
 .filter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 4em;
+}
+
+.filterIcon {
   border-radius: var(--radius-2);
   background-color: white;
   width: var(--spacing-09);
@@ -45,6 +51,28 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+}
+
+.filterIcon:hover {
+  color: var(--color-blue-400);
+}
+
+.filterName {
+  display: none;
+  opacity: 0;
+  position: absolute;
+  font-weight: 600;
+  transform: translateY(-3rem);
+  z-index: 100;
+  background-color: var(--color-white);
+  padding: var(--spacing-01) var(--spacing-03);
+  border-radius: var(--radius-round);
+  box-shadow: var(--shadow-sm);
+}
+
+.filter:hover .filterName {
+  display: block;
+  opacity: 1;
 }
 
 .activeFilter {
