feat: restyle dashboard to branding

--- a/src/assets/styles/globals.css
+++ b/src/assets/styles/globals.css
@@ -17,6 +17,12 @@ body {
   font-size: var(--font-size-body)
 }
 
+h2 {
+  font-family: var(--font-display);
+  font-size: var(--font-size-h2);
+  font-weight: bold;
+}
+
 :focus {
   outline-style: solid;
   outline-color: transparent;
