--- a/src/components/atoms/Button/styles.module.css
+++ b/src/components/atoms/Button/styles.module.css
@@ -7,6 +7,9 @@
   font-family: var(--font-sans);
   font-weight: 600;
   border-radius: var(--radius-2);
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .themePrimary {
