feat: update backgrounds from admin components

--- a/src/components/molecule/AdminUser/styles.module.css
+++ b/src/components/molecule/AdminUser/styles.module.css
@@ -5,7 +5,14 @@
   align-items: center;
 }
 
+.profileIcon {
+  color: var(--color-black);
+}
+
 .adminUser_img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 61px;
   aspect-ratio: 1/1;
   object-fit: contain;
