--- a/src/components/organisms/Admin/AdminProjects/styles.module.css
+++ b/src/components/organisms/Admin/AdminProjects/styles.module.css
@@ -1,11 +1,11 @@
-.adminprojects {
+.adminProjects {
   padding: 2rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  background: radial-gradient(44.64% 44.64% at 68.92% 1.63%, rgba(210, 243, 223, 0.2) 0%, rgba(255, 255, 255, 0.2) 71.06%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, radial-gradient(40.58% 79.56% at 11.84% 89.06%, rgba(206, 210, 251, 0.2) 0%, rgba(255, 255, 255, 0.2) 84.79%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FFFFFF;;
   height: 100%;
   border-radius: var(--radius-2);
+  background: radial-gradient(44.64% 44.64% at 68.92% 1.63%, rgba(216, 218, 226, 0.2) 0%, rgba(255, 255, 255, 0.2) 71.06%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, radial-gradient(40.58% 79.56% at 11.84% 89.06%, rgba(206, 210, 251, 0.2) 0%, rgba(255, 255, 255, 0.2) 84.79%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */, #FFFFFF;
 }
 
 .header {
