feat: building tracker bar

--- a/src/components/atoms/Tracker/styles.module.css
+++ b/src/components/atoms/Tracker/styles.module.css
@@ -1,6 +1,3 @@
-.trackerContainer {
-  background: url('./../../../assets/icons/tracker-start.svg') no-repeat;
-  background-size: contain;
-  height: 30px;
-  width: 260px;
+.tracker {
+  display: flex;
 }
