--- a/src/components/molecule/AdminNewProject/Cocreation/styles.module.css
+++ b/src/components/molecule/AdminNewProject/Cocreation/styles.module.css
@@ -17,6 +17,28 @@
   align-items: center;
 }
 
+.CheckboxRoot {
+  background-color: var(--color-white);
+  width: 25px;
+  height: 25px;
+  border-radius: var(--radius-1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 2px 10px black;
+}
+.CheckboxRoot:hover {
+  background-color: var(--color-blue-500);
+}
+.CheckboxRoot:focus {
+  box-shadow: 0 0 0 2px black;
+}
+
+.CheckboxIndicator {
+  color: var(--color-blue-500);
+}
+
+
 .imgContainer {
   width: 108px;
   height: 108px;
@@ -28,6 +50,19 @@
   align-items: center;
 }
 
+.buildingPiece {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-04);
+  background: var(--color-grey-50);
+  border-radius: var(--radius-2);
+}
+
+.checkedBuildingPiecesContainer {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-06);
+}
 
 
 
@@ -56,4 +91,9 @@
   gap: var(--spacing-02);
   justify-content: center;
   align-items: center;
+}
+
+.objectContainer {
+  display: flex;
+  gap: var(--spacing-08);
 }
