--- a/src/pages/admin/projects/edit/styles.module.css
+++ b/src/pages/admin/projects/edit/styles.module.css
@@ -2,6 +2,8 @@
   display: grid;
   grid-template-columns: 263px 1fr;
   grid-template-rows: auto auto;
+  height: 100%;
+  overflow-y: auto;
   gap: 2rem;
 }
 
