--- a/src/components/layouts/admin-layout/styles.module.css
+++ b/src/components/layouts/admin-layout/styles.module.css
@@ -1,23 +1,29 @@
 .adminContainer {
+  height: 100vh;
   display: grid;
   grid-template-columns: 263px 1fr;
-  grid-template-rows: auto auto;
+  grid-template-rows: 80px 1fr;
   gap: 2rem;
+  overflow: hidden;
+  padding-bottom: var(--spacing-04);
 }
 
 .adminNav {
   grid-column: 1/3;
-  grid-row: 1/2;
+  grid-row: 1/2
 }
 
 .adminSidenav {
   grid-column: 1/2;
   grid-row: 2/3;
   max-width: 221px;
+  height: 100%;
 }
 
 .adminMain {
   grid-column: 2/3;
   grid-row: 2/3;
   padding-right: 2rem;
+  height: 100%;
+  overflow: hidden;
 }
