--- a/src/components/molecule/AdminEditProject/Cocreation/styles.module.css
+++ b/src/components/molecule/AdminEditProject/Cocreation/styles.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   gap: var(--spacing-06);
   padding: var(--spacing-06) 6rem;
+  overflow-y: auto;
 }
 
 .location, .cocreation, .buildingpieces, .checkedBuildingPieces {
