--- a/src/components/organisms/Admin/AdminOccurrences/styles.module.css
+++ b/src/components/organisms/Admin/AdminOccurrences/styles.module.css
@@ -1,5 +1,6 @@
 .adminOccerrences {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -12,4 +13,9 @@
   display: grid;
   grid-template-columns: 65px 3fr 1fr 2fr 30px 1fr 1fr;
   column-gap: 2rem;
+}
+
+.occurrencesContainer {
+  height: 100%;
+  overflow-y: auto;
 }
