--- a/src/components/organisms/Admin/AdminUsers/styles.module.css
+++ b/src/components/organisms/Admin/AdminUsers/styles.module.css
@@ -1,5 +1,6 @@
 .adminUsers {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -12,4 +13,9 @@
   display: grid;
   grid-template-columns: 65px 3fr 3fr 2fr 1fr 30px;
   column-gap: 2rem;
+}
+
+.usersContainer {
+  height: 100%;
+  overflow-y: auto;
 }
