--- a/src/components/atoms/MapSetup/styles.module.css
+++ b/src/components/atoms/MapSetup/styles.module.css
@@ -22,3 +22,14 @@
   background-color: var(--color-blue-500);
   border-radius: var(--radius-1);
 }
+
+
+.input input {
+  border-radius: var(--radius-2);
+  padding: 1rem 2rem;
+}
+
+.input {
+  background-color: var(--color-blue-100);
+  border-radius: var(--radius-2);
+}
