--- a/src/components/atoms/MapSetup/styles.module.css
+++ b/src/components/atoms/MapSetup/styles.module.css
@@ -6,7 +6,7 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
   width: 350px;
   height: 400px;
@@ -30,6 +30,25 @@
 }
 
 .input {
-  background-color: var(--color-blue-100);
+  background-color: var(--color-white);
   border-radius: var(--radius-2);
+}
+
+.locationInputBox {
+  display: flex;
+  align-items: center;
+  gap: var(--spacing-04);
+}
+
+.locationMark {
+  padding: 0.5rem;
+  border-radius: var(--radius-2);
+  background-color: var(--color-white);
+  color: var(--color-green-500);
+}
+
+.locationPicker {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-02);
 }
