projectDetails en Footer

--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -82,6 +82,7 @@
   --color-filter: rgb(25 25 25 / 40%);
   --color-white: #fff;
   --color-black: #191919;
+  --color-title: #2D3653;
   --bp-xxl: 1920px;
   --bp-xl: 1440px;
   --bp-lg: 1024px;
