--- a/src/components/atoms/Button/styles.module.css
+++ b/src/components/atoms/Button/styles.module.css
@@ -15,6 +15,7 @@
 .themePrimary {
   color: var(--color-white);
   background-color: var(--color-blue-500);
+  transition: All .3s ease-in-out;
 
   &:hover {
     background-color: var(--color-blue-300);
@@ -33,6 +34,7 @@
 .themeSecondary {
   color: var(--color-white);
   background-color: var(--color-purple-500);
+  transition: All .3s ease-in-out;
 
   &:hover {
     background-color: var(--color-purple-300);
@@ -51,6 +53,7 @@
 .themeTertiary {
   color: var(--color-white);
   background-color: var(--color-green-500);
+  transition: All .3s ease-in-out;
 
   &:hover {
     background-color: var(--color-green-300);
@@ -69,6 +72,7 @@
 .themeWarning {
   color: var(--color-black);
   background-color: var(--color-yellow-500);
+  transition: All .3s ease-in-out;
 
   &:hover {
     background-color: var(--color-yellow-300);
@@ -76,6 +80,25 @@
 
   &:active {
     background-color: var(--color-yellow-400);
+  }
+
+  &:disabled {
+    color: var(--color-grey-500);
+    background-color: var(--color-grey-200);
+  }
+}
+
+.themeTransparent {
+  color: var(--color-black);
+  background-color: transparent;
+  transition: All .3s ease-in-out;
+
+  &:hover {
+    background-color: var(--color-grey-200);
+  }
+
+  &:active {
+    background-color: var(--color-grey-300);
   }
 
   &:disabled {
