--- a/src/pages/project/styles.module.css
+++ b/src/pages/project/styles.module.css
@@ -16,5 +16,10 @@
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-09);
   padding: var(--spacing-08) 148px;
+  background: var(--color-gradient-variant);
+  height: 100%;
 }
