add images to project types and register users

--- a/src/components/molecule/AdminNewProject/Setup/styles.module.css
+++ b/src/components/molecule/AdminNewProject/Setup/styles.module.css
@@ -28,6 +28,13 @@
   grid-template-columns: repeat(3, 1fr);
 }
 
+.imgContainer {
+  position: relative;
+  width: 250px;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+}
+
 .typePlein, .typePark, .typeStraat {
   display: flex;
   flex-direction: column;
