--- a/src/components/molecule/ProjectCard/styles.module.css
+++ b/src/components/molecule/ProjectCard/styles.module.css
@@ -28,9 +28,15 @@
 }
 
 .cardImg {
+  position: relative;
   width: 100%;
   height: 196px;
+  object-fit: cover;
   background-color: var(--color-grey-200);
+  border-radius: var(--radius-2);
+}
+
+.imageBorderRadius {
   border-radius: var(--radius-2);
 }
 
