--- a/src/components/organisms/Admin/AdminProjects/styles.module.css
+++ b/src/components/organisms/Admin/AdminProjects/styles.module.css
@@ -15,10 +15,6 @@
 }
 
 .projectContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-  justify-content: center;
   overflow-y: scroll;
   position: relative;
 }
@@ -28,11 +24,8 @@
   grid-template-columns: 2fr 2fr 1fr 3fr;
   column-gap: 2rem;
   align-items: center;
-  position: sticky;
-  top: 0;
-  left: 0;
   padding: var(--spacing-04) 0;
-  margin: 0 0 var(--spacing-02) 0;
+  margin-bottom: -1rem;
   background: var(--color-white);
 }
 
@@ -40,7 +33,6 @@
   display: flex;
   flex-direction: column;
   gap: var(--spacing-06);
-  margin-top: var(--spacing-04);
   padding-bottom: var(--spacing-04);
 }
 
