--- a/src/pages/project/styles.module.css
+++ b/src/pages/project/styles.module.css
@@ -1,5 +1,6 @@
 .header {
   position: relative;
+  object-fit: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -7,6 +8,12 @@
   margin-bottom: 1rem;
   height: 411px;
   gap: var(--spacing-09);
+}
+
+.bgImage {
+  object-fit: cover;
+  opacity: 0.2;
+  z-index: -2;
 }
 
 .goBack {
