--- a/src/components/molecule/AdminNewProject/Setup/styles.module.css
+++ b/src/components/molecule/AdminNewProject/Setup/styles.module.css
@@ -7,6 +7,7 @@
 
 .footer {
   display: flex;
+  justify-content: center;
   gap: var(--spacing-04);
   padding-top: var(--spacing-06);
   padding-bottom: var(--spacing-08);
