--- a/src/components/atoms/Dropdown/NavUser/styles.module.css
+++ b/src/components/atoms/Dropdown/NavUser/styles.module.css
@@ -15,6 +15,9 @@
   z-index: 10;
   color: var(--color-black);
 }
+.button:hover {
+  background: var(--color-blue-300);
+}
 
 .buttonInfo {
   display: flex;
